fix letter-spacing problem from last letters.

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body {
     font-size: 68px;
     font-weight: 400;
     letter-spacing: 50px;
+    margin-right: -50px;
     animation: moveInTop 1s ease-out;
 }
 
@@ -61,6 +62,7 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 16.8px;
+    margin-right: -16.8px;
     animation: moveInBottom 1s ease-out;
 }
 
@@ -112,6 +114,7 @@ body {
     text-transform: uppercase;
     text-decoration: none;
     letter-spacing: 5px;
+    margin-right: -5px;
     border-radius: 100px;
     padding: 15px 40px;
     transition: all .2s;
